# mirea-rp2040

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  configure.sh
cmake/: FreeRTOS-Config.cmake  IoLibrary_Driver.cmake  mbedtls_config.cmake  no-OS-FatFS-SD-SDIO-SPI-RPi-Pico.cmake  timer.cmake
lib/FreeRTOS-Config/: FreeRTOSConfig-OG.h  FreeRTOSConfig.h
lib/ioLibrary_Driver_port/: wizchip_gpio_irq.c  wizchip_gpio_irq.h  wizchip_qspi_pio.c  wizchip_spi.c  wizchip_spi.h
lib/lwip-config/: CMakeLists.txt  lwipopts.h
lib/mbedtls/: mbedtls_config.h  ssl_config.h
lib/open62541/: CMakeLists.txt  clock_freertos.c  open62541.h
lib/open62541_unused/: CMakeLists.txt  open62541.c
lib/open62541_unused/include/: FreeRTOSConfig.h  opc_add_temperature.h  opc_freertos_status.h  open62541.h  open62541config.h
src/: minidebug.h
src/dhcp_mqtt/: CMakeLists.txt  dhcp_mqtt.c  wizchip_dhcp_mqtt.c  wizchip_overrides.h
src/freertos_example/: CMakeLists.txt
src/hello_world/: CMakeLists.txt  main.c
src/onboard_temperature/: CMakeLists.txt  onboard_temperature.c  ws2812.h
src/opcua/: CMakeLists.txt  README.md  w5x00_opcua.c
src/opcua62541/: CMakeLists.txt  README.md  opcua_model.c  opcua_model.h  w5x00_opcua.c  w5x00_opcua_config.h  w5x00_open62541_net.c  w5x00_open62541_net.h
src/opcua62541/tools/: test_opcua_connection.py
src/sd/: CMakeLists.txt  hw_config.c  main.c  ws2812.h
src/sd_command_line/: CMakeLists.txt
src/sd_command_line/config/: hw_config.c
src/sd_command_line/src/: command.cpp
src/uart_input_test/: CMakeLists.txt  main.c  ws2812.h  ws2812.pio
src/ws2812/: CMakeLists.txt
src/ws2812_simple/: CMakeLists.txt  ws2812_simple.c  ws2812_simple.pio
